--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Biz United USA</title>
-        <meta name="description" content="Biz United USA, Home Page">
-        <meta name="author" content="Dallin Thomas Stewart">
+        <meta name="description" content="Welcome to Biz United USA. Here you can learn about the United States' trade, commerce, and more!">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/base.css">
         <script src="scripts/getdates.js" defer></script>
     </head>
     <body>
         <header>
-            <img src="images/sitelogo.webp" width="100">
+            <img src="images/sitelogo.webp" width="100" alt="Biz United USA">
             <h1>Biz United USA - <span>Dallin Stewart</span></h1>
             <nav>
                 <a href="#">Home</a>
@@ -31,26 +33,30 @@
               <section class="card">
                 <h2>My Photo</h2>
                 <ul>
-                  <img src="images/profile.webp" alt="Hello, my name is Dallin Stewart" width="200">
+                    <li>
+                        <img src="images/profile.webp" alt="Hello, my name is Dallin Stewart" width="200">
+                    </li>
                 </ul>
               </section>
+              <section class="card">
+                <section class="card">
+                  <h2>Web Certificate Courses</h2>
+                  <nav id="filter-nav">
+                    <a href="#" class="active" data-filter="all">All</a>
+                    <a href="#" data-filter="CSE">CSE</a>
+                    <a href="#" data-filter="WDD">WDD</a>
+                  </nav>
+              
+                  <div id="courses-container" class="courses-grid"></div>
+                  <div id="total-credits" class="total-credits"></div>
+                </section>
+              </section>
         </main>
-        <section class="card2">
-          <h2>Web Certificate Courses</h2>
-          <nav id="filter-nav">
-            <a href="#" class="active" data-filter="all">All</a>
-            <a href="#" data-filter="CSE">CSE</a>
-            <a href="#" data-filter="WDD">WDD</a>
-          </nav>
-      
-          <div id="courses-container" class="courses-grid"></div>
-          <div id="total-credits" class="total-credits"></div>
-        </section>
         <footer>
           <p>
             &copy; <span id="currentyear"></span> Dallin Stewart, US
-            <p id="lastModified"></p>
           </p>
+          <p id="lastModified"></p>
         </footer>
     </body>
 </html>
