--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -83,9 +83,31 @@
                     <button id="list">List</button>
                 </div>
                 <article class="grid" id="members">
-                    
+                    <!-- Member profiles will be dynamically inserted here -->
+                </article>
+            </section>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-grid">
+            <div class="footer-info">
+                <h4>Biz United USA</h4>
+                <p>1321 Lincoln Avenue<br>Pacific Grove, California</p>
+                <p><a href="mailto:info@bizunitedusa.org">info@bizunitedusa.org</a></p>
+                <p>(831) 601-5459</p>
+            </div>
+            <div class="footer-social">
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-x-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+            </div>
+            <div class="footer-meta">
+                <p>WDD231 Class Project</p>
+                <p><span>Dallin Stewart</span></p>
+                <p>&copy; <span id="currentyear"></span> United States</p>
+                <p id="lastModified"></p>
             </div>
         </div>
     </footer>
-    </body>
+  </body>
 </html>
