--- a/directory1.html
+++ b/directory1.html
@@ -26,8 +26,8 @@
                 <h1>Biz United USA - <span>Chamber Page</span></h1>
             </div>
             <nav>
-                <a href="#">Home</a>
-                <a href="https://thedarkside857.github.io/wdd231/chamber/directory.html">Directory</a>
+                <a href="https://thedarkside857.github.io/wdd231/">Home</a>
+                <a href="#">Directory</a>
                 <a href="#">Join</a>
                 <a href="#">Discover</a>
             </nav>
@@ -76,6 +76,16 @@
                     </ul>
                 </section>
             </div>
+            <section class="directory-spotlight">
+                <h3 class="section-title">Featured Members</h3>
+                <div class="menu">
+                    <button id="grid">Grid</button>
+                    <button id="list">List</button>
+                </div>
+                <article class="grid" id="members">
+                    <!-- Member profiles will be dynamically inserted here -->
+                </article>
+            </section>
         </section>
     </main>
     <footer>
