--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-…" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/directory.css">
     <script src="scripts/directory.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
@@ -52,7 +53,6 @@
                 <button id="list">List</button>
             </div>
             <article class="grid" id="members">
-                <div id="members" class="grid">
                     <!-- JavaScript will fill this -->
                     <p class="loading">Loading members…</p>
                 </div>
