--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,10 +6,10 @@
     <title>Biz United USA - Directory of Members</title>
     <meta name="description" content="Welcome to Biz United USA. Here you can learn about the United States' trade, commerce, and more!">
     <meta name="author" content="Dallin Stewart">
-    <meta property="og:title" content="Facebook">
-    <meta property="og:description" content="Discover the world of Facebook and connect with your friends and family. A little connection goes a long way!">
-    <meta property="og:url" content="https://www.facebook.com/">
-    <meta property="og:image" content="https://www.facebookbrand.com/img/fb-art.jpg">
+    <meta property="og:title" content="Biz United USA - Chamber Directory">
+    <meta property="og:description" content="Discover member businesses of Biz United USA.">
+    <meta property="og:url" content="https://thedarkside857.github.io/wdd231/directory.html">
+    <meta property="og:image" content="images/hero.jpg">
     <link rel="icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/directory.css">
     <script src="scripts/directory.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
+    <button class="mobile-toggle" aria-label="Menu">Menu</button>
   </head>
   <body>
     <header>
@@ -53,9 +54,7 @@
                 <button id="list">List</button>
             </div>
             <article class="grid" id="members">
-                    <!-- JavaScript will fill this -->
-                    <p class="loading">Loading members…</p>
-                </div>
+                <p class="loading">Loading members…</p>
             </article>
         </section>
     </main>
