--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -48,15 +48,15 @@
             </div>
         </section>
         <section class="directory-spotlight">
-            <h3 class="section-title">Featured Members</h3>
+            <h2 class="section-title">Featured Members</h2>
             <div class="menu">
-                <button id="grid">Grid</button>
-                <button id="list">List</button>
+              <button id="grid">Grid</button>
+              <button id="list">List</button>
             </div>
-            <article class="grid" id="members">
-                <p class="loading">Loading members…</p>
+            <article id="members" class="grid">
+              <p class="loading">Loading members…</p>
             </article>
-        </section>
+          </section>
     </main>
     <footer>
         <div class="footer-grid">
