--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,70 +14,80 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-…" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+          integrity="sha512-…"
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/directory.css">
     <script src="scripts/directory.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
-    <button class="mobile-toggle" aria-label="Menu">Menu</button>
   </head>
+
   <body>
     <header>
-        <div class="top-bar">
-            <div class="logo">
-                <img src="images/sitelogo.webp" width="100" alt="Biz United USA">
-                <h1>Biz United USA - <span>Chamber Page</span></h1>
-            </div>
-            <nav>
-                <a href="https://thedarkside857.github.io/wdd231/index.html">Home</a>
-                <a href="#">Directory</a>
-                <a href="#">Join</a>
-                <a href="#">Discover</a>
-            </nav>
+      <div class="top-bar container">
+        <div class="logo">
+          <img src="images/sitelogo.webp" width="100" alt="Biz United USA">
+          <h1>Biz United USA - <span>Chamber Page</span></h1>
         </div>
+        <nav class="desktop-nav">
+          <a href="https://thedarkside857.github.io/wdd231/index.html">Home</a>
+          <a href="directory.html">Directory</a>
+          <a href="join.html">Join</a>
+          <a href="discover.html">Discover</a>
+        </nav>
+        <button class="mobile-toggle" aria-label="Menu">Menu</button>
+      </div>
+      <nav class="mobile-nav">
+        <a href="https://thedarkside857.github.io/wdd231/index.html">Home</a>
+        <a href="directory.html">Directory</a>
+        <a href="join.html">Join</a>
+        <a href="discover.html">Discover</a>
+      </nav>
     </header>
-    <main>
-        <section class="hero">
-            <div class="hero-image">
-                <img src="images/hero.jpg" alt="Hero Image"/>
-            </div>
-            <div class="hero-overlay"></div>
-            <div class="hero-content">
-                <h2>Welcome to Biz United USA</h2>
-                <p>Here you can learn about various businesses based in the United States, their trade and commerce, and more!</p>
-                <a href="#" class="btn">Keynote Tickets</a>
-            </div>
-        </section>
-        <section class="directory-spotlight">
-            <h2 class="section-title">Featured Members</h2>
-            <div class="menu">
-              <button id="grid">Grid</button>
-              <button id="list">List</button>
-            </div>
-            <article id="members" class="grid">
-              <p class="loading">Loading members…</p>
-            </article>
-          </section>
+    <main class="container">
+      <section class="hero">
+        <div class="hero-image">
+          <img src="images/hero.jpg" alt="Biz United USA hero">
+        </div>
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+          <h1>Welcome to Biz United USA</h1>
+          <p>Here you can learn about various businesses based in the United States, their trade and commerce, and more!</p>
+          <a href="#" class="btn">Keynote Tickets</a>
+        </div>
+      </section>
+      <section class="directory-spotlight">
+        <h2 class="section-title">Featured Members</h2>
+        <div class="menu">
+          <button id="grid">Grid</button>
+          <button id="list">List</button>
+        </div>
+        <article id="members" class="grid">
+          <p class="loading">Loading members…</p>
+        </article>
+      </section>
     </main>
     <footer>
-        <div class="footer-grid">
-            <div class="footer-info">
-                <h4>Biz United USA</h4>
-                <p>1321 Lincoln Avenue<br>Pacific Grove, California</p>
-                <p><a href="mailto:info@bizunitedusa.org">info@bizunitedusa.org</a></p>
-                <p>(831) 601-5459</p>
-            </div>
-            <div class="footer-social">
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-x-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
-            <div class="footer-meta">
-                <p>WDD231 Class Project</p>
-                <p><span>Dallin Stewart</span></p>
-                <p>&copy; <span id="currentyear"></span> United States</p>
-                <p id="lastModified"></p>
-            </div>
+      <div class="footer-grid container">
+        <div class="footer-info">
+          <h4>Biz United USA</h4>
+          <p>1321 Lincoln Avenue<br>Pacific Grove, California</p>
+          <p><a href="mailto:info@bizunitedusa.org">info@bizunitedusa.org</a></p>
+          <p>(831) 601-5459</p>
         </div>
+        <div class="footer-social">
+          <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+          <a href="#" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
+          <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="footer-meta">
+          <p>WDD231 Class Project</p>
+          <p><span>Dallin Stewart</span></p>
+          <p>&copy; <span id="currentyear"></span> United States</p>
+          <p id="lastModified"></p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
