--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biz United USA - Home</title>
+  <meta name="author" content="Dallin Stewart">
   <meta name="description" content="Welcome to Biz United USA Chamber of Commerce">
   <meta property="og:title" content="Biz United USA - Chamber of Commerce">
   <meta property="og:description" content="Connecting businesses across the United States">
@@ -57,7 +58,7 @@
           <div id="current-weather">
             <p id="town" style="font-size:1.2rem; margin:0.5rem 0;"></p>
             <div style="display:flex; align-items:center; gap:1rem; margin:1rem 0;">
-              <img id="graphic" src="" alt="" width="80" height="80">
+              <img id="graphic" src="https://openweathermap.org/img/wn/02d@2x.png" alt="Weather icon" width="80" height="80" loading="lazy">
               <div>
                 <div id="temperature" class="temp">--°F</div>
                 <p id="description" style="margin:0; text-transform:capitalize;"></p>
