--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,16 +56,16 @@
         <section class="card weather-card">
           <h2>Current Weather - Pacific Grove, CA</h2>
           <div id="current-weather">
-            <p id="town" style="font-size:1.2rem; margin:0.5rem 0;"></p>
-            <div style="display:flex; align-items:center; gap:1rem; margin:1rem 0;">
+            <p id="town"></p>
+            <div id="weather-display">
               <img id="graphic" src="https://openweathermap.org/img/wn/02d@2x.png" alt="Weather icon" width="80" height="80" loading="lazy">
               <div>
                 <div id="temperature" class="temp">--°F</div>
-                <p id="description" style="margin:0; text-transform:capitalize;"></p>
+                <p id="description"></p>
               </div>
             </div>
           </div>
-          <h3 style="margin-top:1.5rem;">3-Day Forecast</h3>
+          <h3>3-Day Forecast</h3>
           <ul id="forecast" class="forecast-list">
             <!-- Forecast items go here dynamically -->
           </ul>
