--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biz United USA - Home</title>
   <meta name="author" content="Dallin Stewart">
-  <meta name="description" content="Welcome to Biz United USA Chamber of Commerce">
+  <meta name="description" content="Biz United USA Chamber of Commerce – Connecting businesses in Pacific Grove and across the United States with networking events, member directory, and resources for growth.">
   <meta property="og:title" content="Biz United USA - Chamber of Commerce">
-  <meta property="og:description" content="Connecting businesses across the United States">
+  <meta property="og:description" content="Join Biz United USA Chamber of Commerce – Pacific Grove, California. Discover member businesses, upcoming events, and valuable resources designed to help your business thrive in today’s economy.">
   <meta property="og:url" content="https://thedarkside857.github.io/wdd231/">
   <meta property="og:image" content="https://thedarkside857.github.io/wdd231/images/sitelogo.webp">
   <link rel="icon" href="images/favicon.ico">
