--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Biz United USA - Join Us</title>
+  <title>Biz United USA - Discover</title>
   <meta name="author" content="Dallin Stewart">
-  <meta name="description" content="Biz United USA Chamber of Commerce – Connecting businesses in Pacific Grove and across the United States with networking events, member directory, and resources for growth.">
+  <meta name="description" content="Biz United USA Chamber of Commerce – Connecting businesses across the United States with networking events, member directory, and resources for growth.">
   <meta property="og:title" content="Biz United USA - Chamber of Commerce">
-  <meta property="og:description" content="Join Biz United USA Chamber of Commerce – Pacific Grove, California. Discover member businesses, upcoming events, and valuable resources designed to help your business thrive in today’s economy.">
+  <meta property="og:description" content="Learn about the many interesting locales and spots in Biz United USA's home area, Pacific Grove.">
   <meta property="og:url" content="https://thedarkside857.github.io/wdd231/">
   <meta property="og:image" content="https://thedarkside857.github.io/wdd231/images/sitelogo.webp">
   <link rel="icon" href="images/favicon.ico">
