--- a/final project/final-project-home-thankyou.html
+++ b/final project/final-project-home-thankyou.html
@@ -51,9 +51,7 @@
             <p>(831) 601-5459</p>
         </div>
         <div class="footer-social">
-            <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
-            <a href="https://x.com"><i class="fab fa-x-twitter"></i></a>
-            <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
+          <p>🎮 WDD231 Final Project by Dallin Stewart – <a href="https://www.loom.com/share/98dc39e1f5914abe9041ff0cb698273a">Watch the 5-minute demo video 🎮</a></p>
         </div>
         <div class="footer-meta">
             <p>WDD231 Final Project</p>
